Enhance UI with animated photo slideshows and redesigned roadmap
- Add mini photo slideshows that slide in from left/right during gameplay
- Redesign roadmap from vertical zigzag to horizontal flowing wave pattern
- Scale up all UI elements for better screen utilization (max-width: 1600px)
- Improve typography: larger fonts throughout (headings, body text, buttons)
- Add curved SVG paths with smooth animations and enhanced visual effects
- Implement photo cycling with counters and captions on slideshows
- Enhance game card with gradient backgrounds and better spacing
- Add responsive breakpoints for tablets and mobile devices

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 
           <!-- Result area (hidden until game ends) -->
           <div class="gameResult" id="gameResult" aria-live="polite"></div>
+          
+          <!-- Mini Slideshows Container -->
+          <div class="miniSlideshowsContainer" id="slideshowsContainer" aria-hidden="true"></div>
         </div>
       </div>
     </section>
